--- a/index.html
+++ b/index.html
@@ -951,14 +951,14 @@
                     </div>
                     <div class="portfolio-content">
                         <span class="portfolio-category">Restaurant</span>
-                        <h3>Spice Garden Restaurant</h3>
+                        <h3>Flavor Fusion Restaurant</h3>
                         <p>A delightful dining experience website with menu showcase and online ordering</p>
                         <div class="portfolio-features">
                             <span class="portfolio-tag">Mobile-First</span>
                             <span class="portfolio-tag">Menu Gallery</span>
                             <span class="portfolio-tag">WhatsApp</span>
                         </div>
-                        <a href="https://wa.me/918629933125?text=I%20want%20a%20website%20like%20Spice%20Garden%20Restaurant" class="btn btn-primary" target="_blank" style="font-size: 0.9rem; padding: 12px 30px;">
+                        <a href="https://theunlocksales.github.io/cafe/" class="btn btn-primary" target="_blank" style="font-size: 0.9rem; padding: 12px 30px;">
                             View Website
                         </a>
                     </div>
@@ -970,15 +970,15 @@
                         <i class="fas fa-gem"></i>
                     </div>
                     <div class="portfolio-content">
-                        <span class="portfolio-category">Jewellery</span>
-                        <h3>Royal Jewellers</h3>
-                        <p>Elegant showcase of premium jewelry collections with stunning gallery</p>
+                        <span class="portfolio-category">Interior Design</span>
+                        <h3>Aura Interiors</h3>
+                        <p>Elegant showcase of premium interior designing work with stunning architecture</p>
                         <div class="portfolio-features">
                             <span class="portfolio-tag">Mobile-First</span>
                             <span class="portfolio-tag">Image Gallery</span>
                             <span class="portfolio-tag">WhatsApp</span>
                         </div>
-                        <a href="https://wa.me/918629933125?text=I%20want%20a%20website%20like%20Royal%20Jewellers" class="btn btn-primary" target="_blank" style="font-size: 0.9rem; padding: 12px 30px;">
+                        <a href="https://theunlocksales.github.io/interior/" class="btn btn-primary" target="_blank" style="font-size: 0.9rem; padding: 12px 30px;">
                             View Website
                         </a>
                     </div>
@@ -991,14 +991,14 @@
                     </div>
                     <div class="portfolio-content">
                         <span class="portfolio-category">Gym</span>
-                        <h3>FitLife Gym</h3>
+                        <h3>Iron Forge Fitness</h3>
                         <p>Dynamic fitness center website with membership plans and training programs</p>
                         <div class="portfolio-features">
                             <span class="portfolio-tag">Mobile-First</span>
                             <span class="portfolio-tag">Services</span>
                             <span class="portfolio-tag">WhatsApp</span>
                         </div>
-                        <a href="https://wa.me/918629933125?text=I%20want%20a%20website%20like%20FitLife%20Gym" class="btn btn-primary" target="_blank" style="font-size: 0.9rem; padding: 12px 30px;">
+                        <a href="https://theunlocksales.github.io/gym/" class="btn btn-primary" target="_blank" style="font-size: 0.9rem; padding: 12px 30px;">
                             View Website
                         </a>
                     </div>
@@ -1018,7 +1018,7 @@
                             <span class="portfolio-tag">Courses</span>
                             <span class="portfolio-tag">WhatsApp</span>
                         </div>
-                        <a href="https://wa.me/918629933125?text=I%20want%20a%20website%20like%20Excel%20Coaching%20Institute" class="btn btn-primary" target="_blank" style="font-size: 0.9rem; padding: 12px 30px;">
+                        <a href="https://theunlocksales.github.io/coaching/" target="_blank" style="font-size: 0.9rem; padding: 12px 30px;">
                             View Website
                         </a>
                     </div>
@@ -1030,15 +1030,15 @@
                         <i class="fas fa-hospital"></i>
                     </div>
                     <div class="portfolio-content">
-                        <span class="portfolio-category">Hospital</span>
-                        <h3>LifeCare Hospital</h3>
-                        <p>Comprehensive healthcare website with departments and appointment booking</p>
+                        <span class="portfolio-category">Event planner</span>
+                        <h3>Enchanted Moments</h3>
+                        <p>Comprehensive event planning website with booking</p>
                         <div class="portfolio-features">
                             <span class="portfolio-tag">Mobile-First</span>
                             <span class="portfolio-tag">Services</span>
                             <span class="portfolio-tag">WhatsApp</span>
                         </div>
-                        <a href="https://wa.me/918629933125?text=I%20want%20a%20website%20like%20LifeCare%20Hospital" class="btn btn-primary" target="_blank" style="font-size: 0.9rem; padding: 12px 30px;">
+                        <a href="https://theunlocksales.github.io/event/" class="btn btn-primary" target="_blank" style="font-size: 0.9rem; padding: 12px 30px;">
                             View Website
                         </a>
                     </div>
@@ -1051,14 +1051,14 @@
                     </div>
                     <div class="portfolio-content">
                         <span class="portfolio-category">Real Estate</span>
-                        <h3>Prime Properties</h3>
+                        <h3>Horizon Realty</h3>
                         <p>Modern property showcase website with listings and virtual tours</p>
                         <div class="portfolio-features">
                             <span class="portfolio-tag">Mobile-First</span>
                             <span class="portfolio-tag">Gallery</span>
                             <span class="portfolio-tag">WhatsApp</span>
                         </div>
-                        <a href="https://wa.me/918629933125?text=I%20want%20a%20website%20like%20Prime%20Properties" class="btn btn-primary" target="_blank" style="font-size: 0.9rem; padding: 12px 30px;">
+                        <a href="https://theunlocksales.github.io/realestate/" class="btn btn-primary" target="_blank" style="font-size: 0.9rem; padding: 12px 30px;">
                             View Website
                         </a>
                     </div>
