--- a/index.html
+++ b/index.html
@@ -1004,7 +1004,7 @@
                     </div>
                 </div>
 
-                <!-- Coaching -->
+              <!-- Coaching -->
                 <div class="portfolio-card">
                     <div class="portfolio-image">
                         <i class="fas fa-graduation-cap"></i>
@@ -1018,7 +1018,7 @@
                             <span class="portfolio-tag">Courses</span>
                             <span class="portfolio-tag">WhatsApp</span>
                         </div>
-                        <a href="https://theunlocksales.github.io/coaching/" target="_blank" style="font-size: 0.9rem; padding: 12px 30px;">
+                        <a href="https://theunlocksales.github.io/coaching/" class="btn btn-primary" target="_blank" style="font-size: 0.9rem; padding: 12px 30px;">
                             View Website
                         </a>
                     </div>
