--- a/index.html
+++ b/index.html
@@ -1004,7 +1004,7 @@
                     </div>
                 </div>
 
-              <!-- Coaching -->
+              <!-- Coaching 
                 <div class="portfolio-card">
                     <div class="portfolio-image">
                         <i class="fas fa-graduation-cap"></i>
@@ -1023,6 +1023,8 @@
                         </a>
                     </div>
                 </div>
+
+                -->
 
                 <!-- Hospital -->
                 <div class="portfolio-card">
