--- a/index.html
+++ b/index.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+
+    <!-- YOUR ORIGINAL HEAD - KEEP ALL THIS -->
+
+  <link rel="stylesheet" href="style.css">  <!-- Your CSS -->
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">  <!-- Font Awesome -->
+  <link rel="icon" href="favicon.ico">  <!-- Your favicon -->
+  <!-- ALL your icon links, WhatsApp, etc. -->
+
+    
 <!-- Advanced SEO Meta Tags -->
 <meta name="description" content="The Unlock Sales: Freelance web developer & digital marketing agency in Indore. Custom websites for hotels, real estate, fintech.">
 <meta name="keywords" content="unlock sales, web developer indore, digital marketing indore, website design indore">
@@ -12,8 +21,6 @@
 <link rel="canonical" href="https://theunlocksales.in">
 
     
-    <!-- Custom CSS -->
-    <link rel="stylesheet" href="style.css">
 </head>
 
     <!-- LocalBusiness Schema (Google Rich Results) -->
@@ -1097,4 +1104,5 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
