--- a/index.html
+++ b/index.html
@@ -1,6 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!-- Force Google to use new domain -->
+<link rel="canonical" href="https://theunlocksales.in">
+<meta name="robots" content="index, follow">
+
+<!-- Block old GitHub.io from indexing -->
+<meta name="robots" content="noindex, nofollow" data-domain="theunlocksales.github.io">
+
 
     <!-- YOUR ORIGINAL HEAD - KEEP ALL THIS -->
 
@@ -1104,5 +1111,6 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
 
