--- a/index.html
+++ b/index.html
@@ -8,10 +8,12 @@
   <link rel="stylesheet" href="style.css">  <!-- Your CSS -->
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">  <!-- Font Awesome -->
   <link rel="icon" href="favicon.ico">  <!-- Your favicon -->
+  
   <!-- ALL your icon links, WhatsApp, etc. -->
 
     
 <!-- Advanced SEO Meta Tags -->
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="description" content="The Unlock Sales: Freelance web developer & digital marketing agency in Indore. Custom websites for hotels, real estate, fintech.">
 <meta name="keywords" content="unlock sales, web developer indore, digital marketing indore, website design indore">
 <meta name="robots" content="index, follow">
@@ -1105,6 +1107,7 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
